// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowQueriesStatusIcon should render correctly for error status 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <svg
      color="#E11900"
      fill="currentColor"
      height="16px"
      stroke="currentColor"
      stroke-width="0"
      style="color: rgb(225, 25, 0);"
      viewBox="0 0 24 24"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowQueriesStatusIcon should render correctly for fetching status 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <i
      aria-busy="true"
      aria-label="loading"
      class="style={
  animationDuration: '1000ms',
  animationIterationCount: 'infinite',
  animationName: "keyFrames={\\n  from: { transform: 'rotate(0deg)' },\\n  to: { transform: 'rotate(360deg)' },\\n}\\n",
  animationTimingFunction: 'linear',
  borderBottomColor: '#EEEEEE',
  borderBottomStyle: 'solid',
  borderBottomWidth: 'NaNpx',
  borderLeftColor: '#EEEEEE',
  borderLeftStyle: 'solid',
  borderLeftWidth: 'NaNpx',
  borderRadius: '50%',
  borderRightColor: '#EEEEEE',
  borderRightStyle: 'solid',
  borderRightWidth: 'NaNpx',
  borderTopColor: '#276EF1',
  borderTopStyle: 'solid',
  borderTopWidth: 'NaNpx',
  cursor: 'wait',
  display: 'block',
  height: '16px',
  width: '16px',
}
"
      role="progressbar"
    />
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowQueriesStatusIcon should render correctly for success status 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <svg
      color="#03703C"
      fill="currentColor"
      height="16px"
      stroke="currentColor"
      stroke-width="0"
      style="color: rgb(3, 112, 60);"
      viewBox="0 0 24 24"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowQueriesStatusIcon should render null for pending status 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  />
  <div
    class="style={}
"
  />
</div>
`;
